--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </a-entity>
            
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" cursor-listenerr></a-sphere>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#00b3ff"></a-plane>
               
       <a-entity id = "Casita" position="0 -0.45 0" gltf-model="#casa"></a-entity> 
       <a-entity  id = "Elephant" gltf-model="#tree"></a-entity>
