--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a-cursor position = "0 0 -1" geometry = "primitive:ring; radiusInner:0.03; radiusOuter: 0.04"></a-cursor>
       </a-entity> -->
 
-    <a-entity id="player">
+    <a-entity id="player" position="0 0 2.43">
       <!-- camera -->
       <a-entity id="camera" camera wasd-controls look-controls position="0 1.6 0">
         <a-cursor position="0 0 -1" geometry="primitive:ring; radiusInner:0.03; radiusOuter: 0.04"></a-cursor>
