Adding Equirectangular Sky to the scene

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a-asset-item id="ted" src="assets/ted.glb"></a-asset-item>
       <a-asset-item id="pig"
         src="https://awesomesaucelabs.github.io/piglet-webgl-demo/StreamingAssets/piggleston.glb"></a-asset-item>
+      <a-asset-item id="sky" src="assets/sky.png"></a-asset-item>
     </a- assets>
  
     <!-- HTML Content injected using the id -->
