--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="https://cdn.jsdelivr.net/npm/aframe-blink-controls/dist/aframe-blink-controls.min.js"></script>
   <script src="./scripts/CursorListenerComponent.js"></script>
   <script src="./scripts/AmbientSetter.js"></script>
-  <!-- <script src="./scripts/TestPrimitive.js"></script> -->
   <script src="./scripts/PlayerComponent.js"></script>
   <script src="./scripts/GltfLoaderComponent.js"></script>
   <script src="./scripts/GLTFHoverColorChangerComponent.js"></script>
@@ -34,12 +33,13 @@
     <a-entity id="ambientPlaceHolder"></a-entity>
 
     <!-- Custom component used to add the camera and controls -->
-    <a-entity id = "xrPlayer" position = "0 0 2.43"create-xrplayer></a-entity>
-    
+    <a-entity id = "player" position = "0 0 2.43" player></a-entity>
+
     <a-entity id="gallery" position="0 0 0" gltf-model="#gallery"></a-entity>
     <a-entity id="pig" visible="true" position="1.18 0.72 2.45" scale="0.22 0.22 0.22"rotation="0 1.96 0" gltf-model="#pig"></a-entity>
     <a-entity id="ted" position="0 0 1.5" gltf-model="#ted" grabbable colorchanger sound="src: #punchSound; loop : true" hover-sound></a-entity>
     <a-entity hoverable position="0 0.6 4.6" scale="1.5 0.5 0.5" material="transparent: true; opacity: 0.5; side: double"geometry="primitive: box" sound="src: #ambientSound; loop : true; on: click" ambient-music></a-entity>
+    <a-text value="Now Interactable" geometry="primitive:plane"></a-text>  
   </a-scene>
 </body>
 
