--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 
 <head>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
@@ -27,20 +27,74 @@
       <a-asset-item id="sky" src="assets/sky.png"></a-asset-item>
       <audio id="ambientSound" src="assets/AmbientSound.mp3" preload="auto"></audio>
       <audio id="punchSound" src="assets/PunchSound.mp3" preload="auto"></audio>
+      <a-asset-item id="lucyLab" src="assets/LucyLab.glb"></a-asset-item>
     </a- assets>
  
     <!-- HTML Content injected using the id -->
-    <a-entity id="ambientPlaceHolder"></a-entity>
+    <!-- <a-entity id="ambientPlaceHolder"></a-entity>
 
     <!-- Custom component used to add the camera and controls -->
-    <a-entity id = "player" position = "0 0 2.43" player></a-entity>
+    <!-- <a-entity id = "player" position = "0 0 2.43" player></a-entity> -->
 
-    <a-entity id="gallery" position="0 0 0" gltf-model="#gallery"></a-entity>
-    <a-entity id="pig" visible="true" position="1.18 0.72 2.45" scale="0.22 0.22 0.22"rotation="0 1.96 0" gltf-model="#pig"></a-entity>
+    <!-- <a-entity id="gallery" position="0 0 0" gltf-model="#gallery"></a-entity> -->
+    <!-- <a-entity id="pig" visible="true" position="1.18 0.72 2.45" scale="0.22 0.22 0.22"rotation="0 1.96 0" gltf-model="#pig"></a-entity>
     <a-entity id="ted" position="0 0 1.5" gltf-model="#ted" grabbable colorchanger sound="src: #punchSound; loop : true" hover-sound></a-entity>
     <a-entity hoverable position="0 0.6 4.6" scale="1.5 0.5 0.5" material="transparent: true; opacity: 0.5; side: double"geometry="primitive: box" sound="src: #ambientSound; loop : true; on: click" ambient-music></a-entity>
-    <a-text value="Now Interactable" geometry="primitive:plane"></a-text>  
-  </a-scene>
-</body>
+    <a-text value="Now Interactable" geometry="primitive:plane"></a-text> 
+    <a-entity id="lucyLab" position="0 0 0" gltf-model="#lucyLab"></a-entity> 
+  </a-scene> -->
+<!-- </body>
 
+</html> --> --> -->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" name="viewport" content="width=device-width" />
+    <title>My A-Frame Scene</title>
+    <!-- <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script> -->
+    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/utils/WorkerPool.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/three@0.137.0/examples/js/loaders/KTX2Loader.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-loader-3dtiles-component/dist/aframe-loader-3dtiles-component.min.js"></script>
+  </head>
+  <body>
+    <a-scene environment="preset: default">
+      <a-camera id="camera"></a-camera>
+      <a-entity
+        id="freeman-tiles"
+        position="0 2.6 0"
+        rotation="-90 0 0"
+        scale="1 1 1"        
+        loader-3dtiles="
+         url : https://diegofirstbucket.s3.us-east-2.amazonaws.com/16057/tileset.json;
+         maximumSSE: 48;
+         cameraEl: #camera;
+         wireframe : false;
+        ">
+      </a-entity>
+    </a-scene>
+  </body>
 </html>
+
+
+
+<!-- url: https://www.dropbox.com/scl/fo/pv364cojssa2gy8x4xt07/h?dl=0&rlkey=iaie9hawa1g6bb4t38p0uamg4/tileset.json;  -->
+
+<!-- url : https://int.nyt.com/data/3dscenes/ONA360/TILESET/0731_FREEMAN_ALLEY_10M_A_36x8K__10K-PN_50P_DB/tileset_tileset.json; -->
+
+<!-- file:///C:/Users/diego/Desktop/WebProjects/CesiumAframe/Assets/16057/tileset.json -->
+
+<!-- https://1drv.ms/f/s!AiyZZquV42RPgZYCSJ3VxKmzk8wiIw?e=bXckh7/16057/tileset.json-->
+
+<!-- https://diegofirstbucket.s3.us-east-2.amazonaws.com/16057/ -->
+
+
+<!-- s3://diegofirstbucket/16057/tileset.json -->
+
+
+<!-- https://beta.cesium.com/api/assets/1817970?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJlODUzNDdmNi03M2EzLTQ4ZmUtYjk2My04NDZhNGYwZDcwOTUiLCJpZCI6MTQ1OTY2LCJpYXQiOjE2ODY0MDI4ODZ9.yUPn1jhoGNmn65imxbRvDiV3K0VTM-aVBGL4kQYZ0Ks -->
