Change URL to a SupaBase Bucket

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         rotation="-90 0 0"
         scale="1 1 1"        
         loader-3dtiles="
-         url : https://diegofirstbucket.s3.us-east-2.amazonaws.com/16057/tileset.json;
+         url : https://mqvkrdonntdvxcczprzp.supabase.co/storage/v1/object/public/DiegoFirstBucket/16057/tileset.json;
          maximumSSE: 48;
          cameraEl: #camera;
          wireframe : false;
@@ -27,3 +27,8 @@
     </a-scene>
   </body>
 </html>
+
+
+<!-- https://mqvkrdonntdvxcczprzp.supabase.co/storage/v1/object/public/DiegoFirstBucket/16057/tileset.json -->
+
+<!-- https://diegofirstbucket.s3.us-east-2.amazonaws.com/16057/tileset.json -->
